@@ -50,6 +50,8 @@ Trunk (unreleased changes)
 
   IMPROVEMENTS
     
+    HAMA-336: The all taskid variable's type should be declared as a TaskAttemptID
+                       (edwardyoon)
     HAMA-331: Removing JobInProgressListener 
                        and adding JobInitThread to BSPMaster (edwardyoon)
     HAMA-334: Removing "java5.home" env key from build script. (edwardyoon)
